<resources>
    <string name="app_name">Verificar Daltonismo</string>
    <string name="o_que">O que é?</string>
    <string name="fa_a_o_teste">Faça o teste!</string>
    <string name="teste_1">teste 1</string>
    <string name="teste_2">teste 2</string>
    <string name="teste_3">teste 3</string>
    <string name="seus_resultados">Seus resultados:</string>
    <string name="resposta_1">Resposta_1</string>
    <string name="resposta_2">Resposta_2</string>
    <string name="resposta_3">Resposta_3</string>
    <string name="verificar">Verificar</string>
    <string name="seu_resultado">Seu resultado</string>
    <string name="daltonismo_uma_perturba_o_da_percep_o_visual_caracterizada_pela_incapacidade_de_diferenciar_todas_ou_algumas_cores">
        Daltonismo é uma perturbação da percepção visual caracterizada pela incapacidade de diferenciar todas ou algumas
        cores
    </string>
    <string name="qual_n_mero_voc_ver_na_imagem_abaixo">Qual número você ver na imagem abaixo?</string>
    <string name="digite_aqui">Digite aqui</string>
</resources>
