<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o_que"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" android:textSize="36sp"
            android:id="@+id/textView2"/>
    <TextView
            android:text="@string/fa_a_o_teste"
            android:layout_width="222dp"
            android:layout_height="59dp"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:textSize="36sp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView9"/>
    <Button
            android:text="@string/teste_1"
            android:onClick="click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teste1button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.026" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/teste_2"
            android:onClick="click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teste2button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teste1button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="35dp"
            app:layout_constraintHorizontal_bias="0.05"/>
    <Button
            android:text="@string/teste_3"
            android:onClick="click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teste3button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.026" app:layout_constraintTop_toBottomOf="@+id/teste2button"
            android:layout_marginTop="35dp"/>
    <TextView
            android:text="@string/seus_resultados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintHorizontal_bias="0.83"/>
    <TextView
            android:text="@string/resposta_1"
            android:layout_width="92dp"
            android:layout_height="25dp"
            android:id="@+id/result10" app:layout_constraintStart_toEndOf="@+id/teste1button"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.743" app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginTop="20dp" android:textAlignment="textEnd"/>
    <TextView
            android:text="@string/resposta_2"
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:id="@+id/result2"
            app:layout_constraintTop_toBottomOf="@+id/result10" app:layout_constraintStart_toEndOf="@+id/teste2button"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="68dp" app:layout_constraintHorizontal_bias="0.767"
            android:textAlignment="textEnd"/>
    <TextView
            android:text="@string/resposta_3"
            android:layout_width="102dp"
            android:layout_height="18dp"
            android:id="@+id/result3"
            app:layout_constraintTop_toBottomOf="@+id/result2" app:layout_constraintStart_toEndOf="@+id/teste3button"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="56dp" app:layout_constraintHorizontal_bias="0.74"
            android:textAlignment="textEnd"/>
    <Button
            android:text="@string/verificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verificarButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/teste3button"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.026"/>
    <TextView
            android:text="@string/seu_resultado"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:id="@+id/resultfinal" app:layout_constraintStart_toEndOf="@+id/verificarButton"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.756" app:layout_constraintTop_toBottomOf="@+id/result3"
            android:layout_marginTop="56dp" android:textAlignment="textEnd"/>
    <TextView
            android:text="@string/daltonismo_uma_perturba_o_da_percep_o_visual_caracterizada_pela_incapacidade_de_diferenciar_todas_ou_algumas_cores"
            android:layout_width="296dp"
            android:layout_height="55dp"
            android:id="@+id/textView9" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.08"/>

</androidx.constraintlayout.widget.ConstraintLayout>